fix: adjust layout by removing absolute positioning from mode button and refining gap in page

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     background-color: #1A1A1D;
     height: 100vh;
     position: relative;
+    gap: 50px;
 }
 
 .footer {
@@ -95,7 +96,6 @@
 
 .mode-button {
     display: flex;
-    position: absolute;
     top: 80px;
     width: 160px;
     height: 45px;
